fix alignment

--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -152,6 +152,3 @@ body{
   padding-bottom: 25px;
   background-color: rgba(0, 0, 0, 0.5);
 }
-.bold {
-  font-weight: bold;
-}
